Bug 1229970 Abort script loading start requests if a load has been canceled. r=khuey a=ritu CLOSED TREE

--HG--
extra : commitid : L4fTXJRLpgQ
extra : amend_source : a034fbb5d3e7c2997c5d2635dc1a1c6f014e682c